# budgetize

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Pipfile  README.md  account.py  budgetize.sqlite  finance.py  main.py  mypy.ini  pyproject.toml  requirements.txt  t.py  transaction.py  user.py
budgetize/: __init__.py  __main__.py  _currency_manager.py  _entry_point.py  _settings_manager.py  budget.py  console.py  consts.py  currency_manager.py  exceptions.py  exchange_rate.py  settings_manager.py  utils.py
budgetize/db/: __init__.py  _database.py  database.py
budgetize/db/orm/: __init__.py  _account.py  _account_type.py  _transactions.py  account.py  transactions.py
budgetize/translations/: TRANSLATION_TEMPLATE.po
budgetize/translations/es/: es.po
budgetize/translations/es/LC_MESSAGES/: budgetize.mo
budgetize/tui/: tui_app.py
budgetize/tui/modals/: __init__.py  _categories_modal.py  _confirm_quit.py  _transaction_details.py  categories_modal.py  confirm_modal.py  confirm_quit.py  error_modal.py  file_selector_modal.py  input_modal.py  message_modal.py  transaction_details.py
budgetize/tui/modals/css/: confirm_quit.tcss  error_modal.tcss  file_selector_modal.tcss  input_modal.tcss  message_modal.tcss  transaction_details.tcss
budgetize/tui/screens/: __init__.py  _add_transaction.py  _create_account.py  _initial_config.py  _main_menu.py  _manage_accounts.py  _settings.py  _startup.py  add_transaction.py  create_account.py  create_budget.py  initial_config.py  main_menu.py  manage_accounts.py  settings.py  transfer.py
budgetize/tui/screens/css/: create_account.tcss  create_budget.tcss  initial_config.tcss  main_menu.tcss  settings.tcss  startup.tcss  transfer.tcss
core/: CurrencyManager.py  __init__.py  _currency_manager.py  consts.py  transaction.py  user.py  utils.py
core/accounts/: AccountType.py  _Account.py  _AccountType.py  __init__.py  account.py
core/cli/: utils.py
core/db/: __init__.py  _database.py
core/db/orm/: __init__.py  _account.py  _account_type.py  _base.py  _transactions.py
core/tui/: TuiApp.py  __init__.py  tui_app.py
core/tui/screens/: AddTransaction.py  CreateAccount.py  InitialConfig.py  MainMenu.py  Startup.py  __init__.py  _add_transaction.py  _create_account.py  _initial_config.py  _main_menu.py  _startup.py
core/tui/screens/css/: main_menu.tcss  startup.tcss
core/users/: user.py
docs/: CONTRIBUTING.md
