[tool.poetry]
name = "budgetize"
version = "0.2.0"
description = "A Terminal User Interface (TUI) to create budgets, track your incomes/expenses and manage your finances."
authors = ["fer-hnndz <jfernandohernandez28@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"
homepage = "https://github.com/fer-hnndz/budgetize"
repository = "https://github.com/fer-hnndz/budgetize"
keywords = ["budget", "finance", "expense", "tracker"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
  "Intended Audience :: End Users/Desktop",
  "Programming Language :: Python :: 3",
]

[tool.poetry.scripts]
budgetize = "budgetize.console:run"

[tool.poetry.dependencies]
python = "^3.9"
textual = "*"
SQLAlchemy = "^2.0.29"
arrow = "^1.3.0"
Babel = "^2.14.0"
beautifulsoup4 = "^4.12.3"
asyncio = "^3.4.3"
httpx = "*"
pyperclip = "^1.8.2"
setuptools = "^72.1.0"

[tool.poetry.group.dev.dependencies]
types-setuptools = "^69.2.0.20240317"
pre-commit = "^3.7.0"
black = "*"
mypy = "^1.9.0"
isort = "^5.13.2"
pylint = "^3.1.0"
textual-dev = "*"
types-beautifulsoup4 = "^4.12.0.20240511"
pipenv = "^2024.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
